# chip_8_emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mingw-w64-toolchain.cmake
.github/workflows/: cmake-multi-platform.yml
build-windows/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: main.cpp
src/private/: CHIP8.cpp  Display.cpp  cpu.cpp  memory.cpp
src/public/: CHIP8.hpp  Display.hpp  Input.hpp  Plattform.hpp  cpu.hpp  helpers.hpp  memory.hpp
test_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tests/: unit_test_cpu.cpp
